# QuestionGen

./: .gitignore  IMPLEMENTATION_PLAN.md  pyproject.toml  question_types_pending.py  questiongen.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: launcher_contract.md  live_quality_review.md  pull_request_template.md  question_types_pending.md  reorchestration_pedagogy_audit.md  reorchestration_validation_test_audit.md
docs/archive/: README.md  reorchestration_pedagogy_audit.md  reorchestration_validation_test_audit.md
notebooks/: runner.ipynb  runner_debug.ipynb  runner_pending.ipynb  runner_ui.ipynb
sample_data/: real_sentence_insertion_batch.csv
scripts/: run_demo.py  run_real_sentence_insertion_batch.py  run_real_vocab_review_batch.py
src/questiongen/: __init__.py  _compat.py  batch.py  config.py  console_progress.py  demo.py  designers.py  explanations.py  exporters.py  graph.py  paragraph_ordering.py  parsers.py  planners.py  prompts.py  question_types.py  renderers.py  schemas.py  targeting.py  validators.py
src/questiongen/ui/: __init__.py  gradio_app.py
tests/: test_batch.py  test_console_progress.py  test_gradio_app.py  test_graph.py  test_notebook_contract.py  test_parsers.py  test_planners.py  test_renderers.py  test_validators.py
